# akuma

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  build.rs  clippy.toml  linker-firecracker.ld  linker.ld  seabios_1.16.3-2_all.deb  virt.dtb
crates/akuma-exec/: Cargo.toml  README.md  build.rs
crates/akuma-exec/docs/: CONTAINER_ELF_LOADING.md  REFACTOR_SUMMARY.md
crates/akuma-exec/src/: box_registry.rs  elf_loader.rs  kernel_tests.rs  lib.rs  mmu.rs  process.rs  runtime.rs  sync.rs  threading.rs
crates/akuma-ext2/: Cargo.toml  build.rs
crates/akuma-ext2/src/: ext2.rs  lib.rs  tests.rs
crates/akuma-net/: Cargo.toml  build.rs
crates/akuma-net/src/: dns.rs  hal.rs  http.rs  lib.rs  rump_tap.rs  runtime.rs  smoltcp_net.rs  socket.rs  stats.rs  tests.rs  tls.rs  tls_rng.rs  tls_verifier.rs
crates/akuma-smp/: Cargo.toml
crates/akuma-smp/src/: brain.rs  console_ring.rs  descriptor.rs  fwd_bounce.rs  init_program.rs  lib.rs  ring.rs  state_machine.rs
crates/akuma-ssh/: Cargo.toml
crates/akuma-ssh-crypto/: Cargo.toml
crates/akuma-ssh-crypto/src/: auth.rs  crypto.rs  keys.rs  lib.rs  tests.rs
crates/akuma-ssh/src/: config.rs  constants.rs  kex.rs  lib.rs  message.rs  packet.rs  session.rs  tests.rs  transport.rs  util.rs
tools/build-server/: Cargo.toml  README.md  config.toml
tools/build-server/src/: main.rs
tools/meow-local/: AvailableTools.md  CODE_SEARCH_PLAN.md  CODE_SEARCH_PROGRESS.md  Cargo.toml  MEOW_LOCAL_CONFIG.md  MEOW_MISSING_FEATURES.md  NEW_TOOLS.md  diff_tool.rs
tools/meow-local/.cargo/: config.toml
tools/meow-local/docs/: CONFIGURATION.md
tools/meow-local/src/: code_search.rs  compat.rs  config.rs  diff_tool.rs  main.rs  providers.rs  tools.rs
userspace/: Cargo.toml  README.md  build.sh  linker.ld  linker_user.ld
userspace/.cargo/: config.toml
userspace/akuma-std/: Cargo.toml
userspace/akuma-std/src/: env.rs  ffi.rs  fs.rs  io.rs  lib.rs  os.rs  path.rs  process.rs  sync.rs  thread.rs  time.rs
userspace/allocstress/: Cargo.toml  README.md
userspace/allocstress/src/: main.rs
userspace/apk-tools/: Cargo.toml  README.md  build.rs
userspace/apk-tools/docs/: BUILD_NOTES.md  PIE_LOADER.md
userspace/boa/: Cargo.toml  build.sh
userspace/boa/src/: main.rs
userspace/box/: Cargo.toml  README.md
userspace/box/docs/: OCI_IMAGE_PULL.md  TESTING.md
userspace/box/src/: images.rs  json.rs  main.rs  oci.rs  tests.rs
userspace/cat/: Cargo.toml
userspace/cat/src/: main.rs
userspace/chainlink/: Cargo.toml  README.md
userspace/chainlink/docs/: DEPENDENCIES.md
userspace/chainlink/src/: backend.rs  main.rs
userspace/crush/: Cargo.toml  README.md  build.rs
userspace/crush/docs/: IMPLEMENTATION_DETAILS.md
userspace/dash/: Cargo.toml  README.md  build.rs
userspace/doom/: Cargo.toml  build.rs
userspace/doom/doomgeneric/: w_file_stdc.c  w_wad.c
userspace/doom/src/: main.rs
userspace/doom/stubs/: stubs.c
userspace/dropbear/: Cargo.toml  build.rs
userspace/dropbear/docs/: IMPLEMENTATION_PLAN.md
userspace/dropbear/src/: main.rs
userspace/echo2/: Cargo.toml
userspace/echo2/src/: main.rs
userspace/elftest/: Cargo.toml
userspace/elftest/src/: main.rs
userspace/forktest/: .gitignore  README.md  go.mod
userspace/forktest/c_stress/: README.md  mmap_file.c  mmap_stress.c  pattern2_parent.c
userspace/forktest/child/: main.go
userspace/forktest/docs/: IMPLEMENTATION_PLAN.md
userspace/forktest/parent/: main.go
userspace/forktest/pattern2_minimal/: main.go  pattern2_minimal
userspace/hello/: Cargo.toml
userspace/hello/src/: main.rs
userspace/herd/: Cargo.toml  README.md
userspace/herd/docs/: CORE_AWARE_SCHEDULING.md
userspace/herd/src/: main.rs
userspace/httpd/: Cargo.toml  README.md
userspace/httpd/docs/: TIMESTAMPS.md
userspace/httpd/src/: main.rs
userspace/libakuma/: Cargo.toml
userspace/libakuma-tls/: Cargo.toml
userspace/libakuma-tls/docs/: ERROR_HANDLING_FIX.md  TLS_BUFFER_TRUNCATION_FIX.md
userspace/libakuma-tls/src/: http.rs  lib.rs  rng.rs  transport.rs
userspace/libakuma/docs/: ALLOCATOR_MEMORY_FIX.md  ALLOCATOR_OPTIONS.md  MKDIR_P_IMPROVEMENTS.md  POLL_INPUT_EVENT_FIX.md  SYSCALLS.md  TERMINAL_SYSCALLS.md
userspace/libakuma/src/: fs.rs  lib.rs  net.rs
userspace/llama.cpp/: Cargo.toml  README.md  build.rs
userspace/llama.cpp/docs/: LLAMA_CPP_MMAP_PATCH.md
userspace/make/: Cargo.toml  README.md  build.rs
userspace/make/docs/: IMPLEMENTATION_PLAN.md
userspace/make/src/: main.rs
userspace/musl/: .gitignore  Cargo.toml  build.rs  hello_musl.c
userspace/musl/docs/: BUILD_AND_DISTRIBUTION.md  DYNAMIC_LINKING.md  PLAN_A_KERNEL.md  PLAN_B_EXPERIMENT.md  PLAN_C_INTEGRATION.md  STEP_B_FINAL.md  STEP_B_RECORD.md
userspace/musl/src/: lib.rs
userspace/nca/: Cargo.toml  README.md  build.rs
userspace/neatvi/: README.md
userspace/needle-server/: Cargo.toml  LICENSE  README.md
userspace/needle-server/src/: api.rs  cactus.rs  constrained.rs  engine.rs  lib.rs  (+4 more)
userspace/paws/: Cargo.toml
userspace/pkg/: Cargo.toml  README.md
userspace/quickjs/: Cargo.toml  README.md  build.rs
userspace/rumpkernel/: .gitignore  README.md  build-rumphttp.sh  build.sh  docker-build-rump-server.sh  docker-build-syslinux.sh  docker-build-virtif.sh  docker-build.sh  docker-hijack-demo.sh  docker-net-test.sh  docker-rumpuser-test.sh  docker-sp-fd-test.sh  docker-sysproxy-client-test.sh  docker-sysproxy-spike.sh  package-sdk.sh  test-fiber.sh
userspace/sbase/: Cargo.toml  build.rs
userspace/scratch/: Cargo.toml
userspace/selfhost_repro/: Cargo.toml  build.rs  futextest.rs  lib.rs
userspace/sqld/: .gitignore  Cargo.toml  README.md  build.rs
userspace/sshd/: Cargo.toml  README.md
userspace/stackstress/: Cargo.toml
userspace/stdcheck/: Cargo.toml
userspace/stp_test/: Cargo.toml  build.rs
userspace/tar/: Cargo.toml
userspace/tcc/: Cargo.toml  README.md  build.rs
userspace/termtest/: Cargo.toml
userspace/top/: Cargo.toml
userspace/ubase/: Cargo.toml  build.rs
userspace/wget/: Cargo.toml
userspace/xbps/: Cargo.toml  README.md  build.rs
(+644 files in other folders)
