cargo-features = ["panic-immediate-abort"]

[workspace]
members = [".", "crates/*"]
default-members = [
    ".",
    "crates/akuma-editor",
    "crates/akuma-exec",
    "crates/akuma-ext2",
    "crates/akuma-isolation",
    "crates/akuma-net",
    "crates/akuma-shell",
    "crates/akuma-ssh",
    "crates/akuma-ssh-crypto",
    "crates/akuma-terminal",
    "crates/akuma-vfs",
]
exclude = ["userspace"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kernel_profile_size)', 'cfg(kernel_profile_extreme)'] }

[package]
name = "akuma"
version = "0.0.5"
edition = "2024"

[[bin]]
name = "akuma"
bench = false
test = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "immediate-abort"

# Identical knobs to `size`; the ONLY difference between the two builds is the
# feature set passed on the command line (scripts/build_extreme_size.sh drops the
# sc-* families). build.rs cannot tell `size` from `extreme-size` via OPT_LEVEL
# (both are "z"), so the discriminator is the `extreme` feature, not the profile.
[profile.extreme-size]
inherits = "size"

[features]
default = [
    "neko",
    "tls-rsa",
    "sc-aio", "sc-sysv-ipc", "sc-framebuffer", "sc-containers",
    "sc-timerfd", "sc-eventfd", "sc-pidfd", "sc-epoll",
]
no-tests = ["akuma-net/small-sockets"]
# RSA cert verification for outbound HTTPS/TLS. Enabled by default; dropped by
# the size/extreme profiles (their --no-default-features build omits it) to save
# ~300 KB. SSH is Ed25519-only and unaffected; only RSA-only HTTPS hosts break.
tls-rsa = ["akuma-net/tls-rsa", "dep:rsa"]
# In-kernel `neko` text editor. Enabled by default; the size profile drops it
# via `--no-default-features` in scripts/build_size.sh.
neko = ["dep:akuma-editor"]

# Profile discriminator (NOT a syscall gate). build_extreme_size.sh enables it so
# build.rs can pick a tighter IMAGE_SIZE / STACK_BOTTOM than the `size` profile.
# build.rs reads it via CARGO_FEATURE_EXTREME and emits cfg(kernel_profile_extreme).
extreme = []

# Per-family syscall gates. Default-on so `cargo build`/`run`/`test` keep every
# syscall; the minimal builds use --no-default-features and re-add what they want.
# Tier 1 — pure dead weight, no akuma-exec callbacks.
sc-aio          = []
sc-sysv-ipc     = []
sc-framebuffer  = []
sc-containers   = []
sc-timerfd      = []
# Tier 2 — each needs a no-op ExecRuntime callback stub when off (see main.rs).
sc-eventfd      = []
sc-pidfd        = []
sc-epoll        = []

[lints]
workspace = true

[dependencies]
akuma-editor = { path = "crates/akuma-editor", optional = true }
akuma-terminal = { path = "crates/akuma-terminal" }
akuma-ssh-crypto = { path = "crates/akuma-ssh-crypto" }
akuma-ssh = { path = "crates/akuma-ssh" }
akuma-vfs = { path = "crates/akuma-vfs" }
akuma-ext2 = { path = "crates/akuma-ext2" }
akuma-shell = { path = "crates/akuma-shell" }
akuma-net = { path = "crates/akuma-net" }
akuma-exec = { path = "crates/akuma-exec" }
akuma-isolation = { path = "crates/akuma-isolation" }
talc = "4"
spinning_top = "0.3"
# hashbrown without ahash (ahash requires CPU crypto extensions)
hashbrown = { version = "0.14", default-features = false, features = ["allocator-api2"] }
once_cell = { version = "1", default-features = false, features = ["alloc", "race"] }
fdt = "0.1"
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4", "socket-tcp", "socket-udp", "socket-dns", "medium-ethernet", "alloc", "async", "socket-dhcpv4"] }
virtio-drivers = { version = "0.7", default-features = false }
arm_pl031 = { version = "0.2", default-features = false }

# SSH crypto dependencies (no_std compatible)
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize", "fast"] }
rand_core = { version = "0.6", default-features = false }

critical-section = { version = "1.2", default-features = false }

# ext2 filesystem is implemented directly in src/vfs/ext2.rs
# No external crate - custom implementation for better no_std compatibility

embedded-io-async = { version = "0.6", default-features = false }


# TLS support (no_std compatible)
# Using fork with exposed handshake/extensions modules for custom TlsVerifier
embedded-tls = { version = "0.17", default-features = false, features = ["alloc"] }

# X.509 certificate parsing (no_std compatible)
x509-cert = { version = "0.2", default-features = false }
der = { version = "0.7", default-features = false, features = ["alloc", "oid"] }
const-oid = { version = "0.9", default-features = false }

# ECDSA P-256 signature verification
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

# RSA signature verification — gated behind the `tls-rsa` feature (off in
# size/extreme profiles). The kernel proper does not use this directly; the
# active consumer is akuma-net's TLS cert verifier.
rsa = { version = "0.9", default-features = false, features = ["sha2"], optional = true }

[patch.crates-io]
# Fork based on v0.17.0 (commit 1eaaa136) with exposed handshake/extensions modules
# After creating the branch, replace with your actual commit hash
embedded-tls = { git = "https://github.com/netoneko/embedded-tls", branch = "expose-verifier-types" }
