[workspace]
resolver = "2"
members = [
    "libakuma",
    "libakuma-tls",
    "apk-tools",
    "box",
    "echo2",
    "elftest",
    "hello",
    "herd",
    "httpd",
    "meow",
    "quickjs",
    "stackstress",
    "stdcheck",
    "termtest",
    "allocstress",
    "top",
    "tcc",
    "tar",
    "sshd",
    "llama.cpp",
    "crush",
    "stp_test",
    "wavplay"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"        # optimize for size (smallest code); userspace is mostly I/O-bound
codegen-units = 1      # better cross-unit optimization under LTO, smaller output
strip = true           # drop symbol tables from the shipped ELF

