[workspace]
resolver = "2"
# NOTE (self-hosting): the submodule-backed members — meow, tcc, llama.cpp, crush,
# nca — are temporarily removed from the workspace so the first-party crates build
# without every submodule checked out. Cargo requires *every* listed member's
# Cargo.toml to be present just to load the workspace, so a missing submodule
# blocked building even unrelated crates like `hello`. Re-add them (or build them
# standalone) once the submodule + dep story for in-VM builds is settled.
members = [
    "libakuma",
    "libakuma-tls",
    "apk-tools",
    "box",
    "echo2",
    "elftest",
    "hello",
    "herd",
    "httpd",
    "quickjs",
    "stackstress",
    "stdcheck",
    "termtest",
    "allocstress",
    "top",
    "tar",
    "sshd",
    "stp_test",
    "wavplay",
    "scratch",
    "needle-server"
]
# selfhost_repro is intentionally NOT a member: it is a throwaway crate built
# only *inside* the VM (via its own --manifest-path) to reproduce the
# proc-macro2 build-script deadlock (docs §7f). Exclude it so the host workspace
# never tries to build it.
exclude = [
    "selfhost_repro",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"        # optimize for size (smallest code); userspace is mostly I/O-bound
codegen-units = 1      # better cross-unit optimization under LTO, smaller output
strip = true           # drop symbol tables from the shipped ELF
overflow-checks = false # no checked-arith branches; reduces code size and frame depth

