[package]
name = "akuma-exec"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
# Profile discriminator forwarded from the bin crate's `extreme` feature
# (build_extreme_size.sh). Lets this crate's build.rs emit
# `cfg(kernel_profile_extreme)` so threading can trim the warm-stack floor and
# right-size kernel stacks for the extreme low-memory target. NOT a syscall gate.
extreme = []

[dependencies]
spinning_top = "0.3"
lock_api = "0.4"
log = { version = "0.4", default-features = false }
elf = { version = "0.7", default-features = false }
akuma-terminal = { path = "../akuma-terminal" }
akuma-isolation = { path = "../akuma-isolation" }
embedded-io-async = { version = "0.6", default-features = false }
