[package]
name = "akuma-ext2"
version = "0.1.0"
edition = "2024"
description = "Ext2 filesystem implementation for no_std kernels"

[lints]
workspace = true

[features]
extreme = []
# Large, RAM-sized, clock-eviction block cache (replaces the tiny 64-slot ring).
# Keeps the read-only toolchain (.so + rlibs) resident across the hundreds of
# rustc/cc/ld spawns in a self-host build instead of re-streaming it off disk.
# Off by default; opt in via the kernel's `fs-cache` feature. See
# docs/AKUMA_SELF_HOSTING.md §7a/§7b.
fs-cache = []

[dependencies]
akuma-vfs = { path = "../akuma-vfs" }
spinning_top = "0.3"
