[package]
name = "akuma-net"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
smoltcp = { version = "0.12.0", default-features = false, features = ["log", "proto-ipv4", "socket-tcp", "socket-udp", "socket-dns", "medium-ethernet", "alloc", "async", "socket-dhcpv4"] }
virtio-drivers = { version = "0.7", default-features = false }
embedded-io-async = { version = "0.6", default-features = false }
embedded-tls = { version = "0.17", default-features = false, features = ["alloc"] }
spinning_top = "0.3"
log = { version = "0.4", default-features = false }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
x509-cert = { version = "0.2", default-features = false }
der = { version = "0.7", default-features = false, features = ["alloc", "oid"] }
const-oid = { version = "0.9", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize", "fast"] }
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
