[package]
name = "akuma-ssh-crypto"
version = "0.1.0"
edition = "2024"
description = "SSH-2 cryptographic primitives for no_std kernels"

[lints]
workspace = true

[dependencies]
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize", "fast"] }
