[package]
name = "akuma-ssh"
version = "0.1.0"
edition = "2024"
description = "SSH-2 protocol engine for no_std kernels"

[lints]
workspace = true

[dependencies]
akuma-ssh-crypto = { path = "../akuma-ssh-crypto" }
embedded-io-async = { version = "0.6", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize", "fast"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
ctr = { version = "0.9", default-features = false }
log = { version = "0.4", default-features = false }
