[package]
name = "meow-local"
version = "0.1.0"
edition = "2021"
description = "Meow-chan - Cyberpunk Neko AI Assistant (Native macOS/Linux version)"

[[bin]]
name = "meow-local"
path = "src/main.rs"

[dependencies]
libc = "0.2"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
native-tls = "0.2"