[package]
name = "chainlink-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chainlink"
path = "src/main.rs"

[dependencies]
libakuma = { path = "../libakuma" }
sqld = { path = "../sqld" }
chainlink = { git = "https://github.com/netoneko/chainlink", branch = "abstract-db-layer", default-features = false }
