[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/main.rs"

[dependencies]
# libakuma's `net-async` (embedded-io-async + its build.rs) is off by default, so
# hello's dep tree stays minimal with no extra flags.
libakuma = { path = "../libakuma" }
format_no_std = { version = "1.2.0" }

