[package]
name = "libakuma"
version = "0.1.0"
edition = "2021"

[features]
default = ["chunked-allocator"]
chunked-allocator = []
# `net-async` pulls embedded-io-async, which ships a build.rs that probes rustc —
# a slow/sticky step for in-VM self-host builds. It only gates the
# `embedded_io_async::Error` impl in net.rs. OFF by default so the common case
# (e.g. `hello`, `httpd`) skips the build-script crate; consumers that use the
# async IO traits (e.g. `sshd`) opt in with `features = ["net-async"]`.
net-async = ["dep:embedded-io-async"]
# Use standard Linux ABI for OS-specific helpers that otherwise read from the
# Akuma kernel's process-info page (address 0x1000). Enable when building for
# a standard Linux target (e.g. aarch64-unknown-linux-musl) to avoid a segfault
# on the unmapped low page. Currently gates: getpid() → syscall 172.
linux-abi = []

[dependencies]
talc = "4"
embedded-io-async = { version = "0.6", default-features = false, optional = true }