[package]
name = "needle-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "needle-server"
path = "src/main.rs"

[dependencies]
libakuma     = { path = "../libakuma" }
libakuma-tls = { path = "../libakuma-tls" }
needle-core  = { git = "https://github.com/geekgineer/needle-rs", default-features = false }
libm         = { version = "0.2", default-features = false }
